syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/vendor/vendor_messages_description.proto";
import "avenue/financial/protobuf/product/product_messages_description.proto";
import "avenue/financial/protobuf/salestax/salestax_messages_description.proto";



option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.bill";
option java_outer_classname = "BillMessagesDescriptionProto";

package avenue.financial.protobuf.bill;

message BillProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MetaProto meta = 2;
  avenue.financial.protobuf.core.MiniUserProto owner = 3;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 4;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 5;
  BillInfoProto bill_info = 6;

}

message BillInfoProto{
  google.protobuf.StringValue bill_number = 1;
  google.protobuf.StringValue po_so_number = 2;
  google.protobuf.StringValue bill_date = 3;
  google.protobuf.StringValue due_date = 4;
  avenue.financial.protobuf.vendor.VendorProto vendor = 5;
  google.protobuf.StringValue notes = 6;
  google.protobuf.DoubleValue sub_total = 7;
  google.protobuf.DoubleValue tax_total = 8;
  google.protobuf.DoubleValue total = 9;
  repeated BillItemProto items = 10;

}

message AddBillInfoProto{
  google.protobuf.StringValue bill_number = 1;
  google.protobuf.StringValue po_so_number = 2;
  google.protobuf.StringValue bill_date = 3;
  google.protobuf.StringValue due_date = 4;
  google.protobuf.StringValue vendor_id = 5;
  google.protobuf.StringValue notes = 6;
  google.protobuf.DoubleValue sub_total = 7;
  google.protobuf.DoubleValue tax_total = 8;
  google.protobuf.DoubleValue total = 9;
}
message AddBillProto{

  avenue.financial.protobuf.core.MiniUserProto owner = 1;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 2;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 3;
  AddBillInfoProto bill_info = 4;
  repeated AddBillItemProto items = 5;


}

message UpdateBillProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MiniUserProto owner = 2;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 3;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 4;
  AddBillInfoProto bill_info = 5;
  repeated AddBillItemProto items = 6;

}

message BillItemProto{
  avenue.financial.protobuf.product.ProductProto product = 1;
  google.protobuf.Int32Value quantity = 2;
  google.protobuf.StringValue uom = 3;
  google.protobuf.DoubleValue price = 4;
  avenue.financial.protobuf.salestax.SalesTaxProto tax1 = 5;
  avenue.financial.protobuf.salestax.SalesTaxProto tax2 = 6;

}

message AddBillItemProto{
  google.protobuf.StringValue bill_id = 1;
  google.protobuf.StringValue product_id = 2;
  google.protobuf.Int32Value quantity = 3;
  google.protobuf.StringValue uom = 4;
  google.protobuf.DoubleValue price = 5;
  google.protobuf.StringValue tax1_id = 6;
  google.protobuf.StringValue tax2_id = 7;

}
enum PaymentStatusProto{
  UNPAID = 0;
  PARTIAL_PAID = 1;
  PAID = 2;

}





